# acr-agi-3-agents

./: .env-example  .gitignore  CLAUDE.md  README.md  main.py  nohup.out  pyproject.toml  test_calibration_update.py  test_custom_actions.py  test_player_simulation.py  test_real_game_data.py
agents/: __init__.py
agents/rl/: TRAINING_RESULTS.md  __init__.py  arc_grid_env.py  arc_grid_env.py.backup_before_reward_redesign  autonomous_player_extractor.py  calibration.py  config.json  config_loader.py  dynamic_ppo_trainer.py  dynamic_trajectory_buffer.py  rl_agent.py  rl_training.py  swarm_operations.py  terrain_analyzer.py
agents/rl/extractors/: __init__.py  base_extractor.py  registry.py  stacked_cnn_extractor.py
agents/templates/: comprehensive_nooptest_agent.py  deterministic_tester.py  nooptest_agent.py
tests/rl/: test_autonomous_player_extractor.py
