[project]
name = "arc-agi-3-agents"
version = "0.1.0"
description = "ARC-AGI-3-Agents"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "agentops>=0.4.18",
    "dotenv>=0.9.9",
    "gymnasium>=1.2.0",
    "openai==1.72.0",
    "openai-agents[litellm]>=0.0.12",
    "pillow>=11.2.1",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "sb3-contrib>=2.7.0",
    "smolagents>=1.20.0",
    "stable-baselines3>=2.7.0",
    "tensorboard>=2.20.0",
    "tensorflow>=2.20.0rc0",
    "torch>=2.7.1",
    "torch-geometric>=2.6.1",
    "torchrl>=0.9.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "requests-mock>=1.12.1",
    "ruff>=0.11.4",
]

agentops = [
    "agentops>=0.4.18",
]

[tool.mypy]
strict = true
disallow_untyped_defs = true
exclude = [
    "tests",
]
plugins = []

[tool.ruff.lint]
extend-select = ["I"]
